Prevent the user's rank from wrapping in game history table.

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -460,6 +460,10 @@
             overflow: hidden;
         }
 
+        .user_info  {
+            white-space: nowrap;
+        }
+
         .winner_marker {
             themed color winner-trophy;
             padding-left: 4px;
